# tt-apps

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: container.py  main.py
src/api/: router.py
src/api/v1/: router.py
src/api/v1/routers/: payments.py
src/api/v1/schemas/: payments.py
src/application/outbox/: dispatcher.py
src/application/payments/: processing.py  service.py
src/application/webhook/: service.py
src/core/: config.py  enums.py
src/db/repository/: outbox.py  payments.py
src/db/uow/: payments.py
src/dependencies/: auth.py
src/infrastructure/db/: database.py
src/infrastructure/messaging/: rabbit.py
src/migrations/: env.py
src/migrations/versions/: 91928ac577fb_initial.py
src/models/: __init__.py  outbox.py  payments.py
src/workers/: outbox_dispatcher.py  payment_consumer.py
