[tool.poetry]
name = "test-payment-processing-service"
version = "0.1.0"
description = "Async payment processing service for the task assignment."
authors = ["Darya Dziamidava"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
fastapi = { version = "0.137.2", extras = ["standard"] }
pydantic = "2.13.4"
pydantic-settings = "2.14.2"
sqlalchemy = "2.0.51"
asyncpg = "0.31.0"
psycopg2-binary = "2.9.12"
faststream = "0.7.1"
aio-pika = "9.6.2"
alembic = "1.18.4"
dependency-injector = ">=4.41,<5.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.15.18"
pre-commit = "4.6.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src"]
exclude = [
    ".venv",
    "src/migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
